S28 3165: Report Update - Schedules (#889)